change appsettings json default connection server, rename DB schema to EnigmaBank

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=EnigmaBankDb;Trusted_Connection=True;"
+    "DefaultConnection": "Server=152.42.181.61,1433;Database=EnigmaBankDb;User Id=sa;Password=P@ssw0rd!;Encrypt=False"
   },
   "Logging": {
     "LogLevel": {
