--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -10,4 +10,9 @@
       <ProjectReference Include="..\Domain\Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Mapster" Version="7.4.0" />
+      <PackageReference Include="MediatR" Version="12.4.0" />
+    </ItemGroup>
+
 </Project>
