--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -2,10 +2,37 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=10.10.100.63,1433;Database=EnigmaBankDb;User Id=sa;Password=P@ssw0rd!;Encrypt=False"
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.File"
+    ],
+    "MinimumLevel": {
+      "Default": "Debug"
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "pathFormat": "logs/log.json",
+          "rollingInterval": "Day",
+          "rollOnFileSizeLimit": true,
+          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithProcessId",
+      "WithThreadId"
+    ],
+    "Properties": {
+      "Application": "EnigmaBank",
+      "Environment": "Development"
     }
   },
   "AllowedHosts": "*"
