--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -20,4 +20,8 @@
       <PackageReference Include="Serilog.Enrichers.Thread" Version="4.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Features\UserAccess\Commands\" />
+    </ItemGroup>
+
 </Project>
