--- a/WebApi/appsettings.Development.json
+++ b/WebApi/appsettings.Development.json
@@ -4,5 +4,20 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Authentication": {
+    "Schemes": {
+      "Bearer": {
+        "ValidAudiences": [
+          "http://localhost:26602",
+          "https://localhost:44344",
+          "http://localhost:5094",
+          "https://localhost:7145"
+        ],
+        "ValidIssuer": "dotnet-user-jwts",
+        "AccessTokenExpiryMinutes": 1,
+        "RefreshTokenExpiryMinutes": 2
+      }
+    }
   }
 }
